# llmos

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
otel/: collector-local.yaml  docker-compose.yaml
proto/llmos/v1/: harness.proto
src/: lib.rs
src/background/: mod.rs
src/bus/: mod.rs
src/cli/: client.rs  logging.rs  mod.rs
src/core/: mod.rs
src/daemon/: http.rs  mod.rs
src/errors/: mod.rs
src/harness/: mod.rs  proto.rs
src/harness/agent/: loop_.rs  mod.rs
src/harness/server/: driver.rs  grpc.rs  mod.rs
src/harness/session/: mod.rs
src/model/: chat.rs  mod.rs
src/policy/: mod.rs
src/prompting/: context.rs  mod.rs
src/protocol/: mod.rs
src/runtime/: mod.rs
src/scheduler/: mod.rs
src/telemetry/: mod.rs
src/tools/: background_spawn.rs  browser.rs  mod.rs  registry.rs  schema.rs
