[package]
name = "llmos"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
default-run = "llmosd"
description = "Agent harness library, llmosd daemon (gRPC + HTTP), and llmos-cli client."
license = "MIT"
repository = "https://github.com/llmos/llmos"
readme = "README.md"
keywords = ["agent", "cli", "assistant", "grpc", "opentelemetry"]
categories = [
    "command-line-utilities",
    "development-tools",
    "network-programming",
]

[[bin]]
name = "llmosd"
path = "src/bin/llmosd.rs"

[[bin]]
name = "llmos-cli"
path = "src/bin/llmos-cli.rs"

[lib]
path = "src/lib.rs"

[dependencies]
axum = { version = "0.7", features = ["json"] }
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
cron = "0.15"
opentelemetry = { version = "0.28", features = ["logs", "metrics", "trace"] }
opentelemetry-appender-tracing = "0.28"
opentelemetry-otlp = { version = "0.28", default-features = false, features = ["grpc-tonic", "trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.28", features = ["logs", "metrics", "rt-tokio", "trace"] }
prost = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "sync", "time"] }
tokio-stream = "0.1"
tonic = "0.12"
tracing = "0.1"
tracing-opentelemetry = "0.29"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12"
